--- a/jsnav.css
+++ b/jsnav.css
@@ -1,6 +1,12 @@
-.jsnav-header .jsnav-header-wrapper { position: relative; }
+.jsnav-header { background-color: white; }
 
-.jsnav-header .jsnav-header-wrapper .logo { padding: 30px 15px; }
+.jsnav-header .jsnav-header-wrapper { position: relative; font-size: 16px; }
+
+.jsnav-header .jsnav-header-wrapper .logo { padding: 0 25px; line-height: 90px; text-transform: capitalize; font-weight: normal; }
+
+.jsnav-header .jsnav-header-wrapper .logo a { color: #212529; }
+
+.jsnav-header .jsnav-header-wrapper .jsnav-menu { text-transform: capitalize; font-weight: normal; }
 
 .jsnav-header .jsnav-header-wrapper .jsnav-menu > ul { display: none; padding: 0 0 20px; margin-bottom: 0; }
 
@@ -8,7 +14,7 @@
 
 .jsnav-header .jsnav-header-wrapper .jsnav-menu ul li { position: relative; }
 
-.jsnav-header .jsnav-header-wrapper .jsnav-menu ul li > a { display: block; padding: 14px 15px; font-size: 15px; text-decoration: none; -webkit-transition: all 0.15s ease-in-out; transition: all 0.15s ease-in-out; }
+.jsnav-header .jsnav-header-wrapper .jsnav-menu ul li > a { display: block; padding: 15px; text-decoration: none; -webkit-transition: all 0.15s ease-in-out; transition: all 0.15s ease-in-out; color: #212529; }
 
 .jsnav-header .jsnav-header-wrapper .jsnav-menu ul ul li > a { padding: 14px 15px 14px 30px; }
 
@@ -38,18 +44,19 @@
 
 .dropdown-plus.dropdown-open::after { display: none; }
 
-@media (min-width: 1200px) { .jsnav-header .jsnav-header-wrapper { height: 90px; }
-  .jsnav-header .jsnav-header-wrapper .logo { float: left; padding: 30px 40px 30px 0; }
+@media (min-width: 1200px) { .jsnav-header .jsnav-header-wrapper { max-width: 1200px; height: 90px; margin: 0 auto; }
+  .jsnav-header .jsnav-header-wrapper .logo { float: left; padding: 0 25px; }
   .jsnav-header .jsnav-header-wrapper .burger-menu { display: none; }
-  .jsnav-header .jsnav-header-wrapper .jsnav-menu { float: right; clear: inherit; }
-  .jsnav-header .jsnav-header-wrapper .jsnav-menu > ul { display: block !important; padding: 0; font-size: 0; }
-  .jsnav-header .jsnav-header-wrapper .jsnav-menu > ul > .dropdown_menu::after { transform: rotate(45deg); -webkit-transform: rotate(45deg); border: solid #c1c1c1; border-width: 0 3px 3px 0; padding: 2px; content: ''; margin-bottom: 3px; text-align: right; position: absolute; right: 7px; top: 40px; }
+  .jsnav-header .jsnav-header-wrapper .jsnav-menu { float: right; }
+  .jsnav-header .jsnav-header-wrapper .jsnav-menu > ul { display: block !important; padding: 0; }
+  .jsnav-header .jsnav-header-wrapper .jsnav-menu > ul > .dropdown_menu a { padding-right: 35px; }
+  .jsnav-header .jsnav-header-wrapper .jsnav-menu > ul > .dropdown_menu::after { transform: rotate(45deg); -webkit-transform: rotate(45deg); border: solid #c1c1c1; border-width: 0 3px 3px 0; padding: 2px; content: ''; position: absolute; right: 20px; height: calc($height - 50%); top: calc(50% - 5px); }
   .jsnav-header .jsnav-header-wrapper .jsnav-menu > ul > li { display: inline-block; }
-  .jsnav-header .jsnav-header-wrapper .jsnav-menu > ul > li > a { position: relative; -webkit-box-sizing: border-box; box-sizing: border-box; height: 90px; padding: 0 25px; line-height: 90px; white-space: nowrap; }
+  .jsnav-header .jsnav-header-wrapper .jsnav-menu > ul > li > a { position: relative; -webkit-box-sizing: border-box; box-sizing: border-box; padding: 0 25px; line-height: 90px; white-space: nowrap; }
   .jsnav-header .jsnav-header-wrapper .jsnav-menu ul li { position: relative; }
   .jsnav-header .jsnav-header-wrapper .jsnav-menu ul li.dropdown_menu > a > span { display: none; }
   .jsnav-header .jsnav-header-wrapper .jsnav-menu ul ul li > a { position: relative; padding: 9px 35px 7px !important; }
-  .jsnav-header .jsnav-header-wrapper .jsnav-menu li > ul { background: #F8F9FA; position: absolute; top: 100%; left: 0; display: block !important; width: 250px; padding: 27px 0; visibility: hidden; -webkit-box-shadow: 0 12px 30px -2px rgba(0, 0, 0, 0.07); box-shadow: 0 12px 30px -2px rgba(0, 0, 0, 0.07); opacity: 0; -webkit-transition: all 0.15s ease-in-out; transition: all 0.15s ease-in-out; }
+  .jsnav-header .jsnav-header-wrapper .jsnav-menu li > ul { background: white; position: absolute; top: calc(100% + 1px); left: 0; display: block !important; width: 250px; padding: 27px 0; visibility: hidden; -webkit-box-shadow: 0 12px 30px -2px rgba(0, 0, 0, 0.07); box-shadow: 0 12px 30px -2px rgba(0, 0, 0, 0.07); opacity: 0; -webkit-transition: all 0.15s ease-in-out; transition: all 0.15s ease-in-out; }
   .jsnav-header .jsnav-header-wrapper .jsnav-menu li > ul ul { top: -27px; left: 100%; }
   .jsnav-header .jsnav-header-wrapper .jsnav-menu li > ul > .dropdown_menu::after { transform: rotate(-45deg); -webkit-transform: rotate(-45deg); border: solid #c1c1c1; border-width: 0 3px 3px 0; padding: 2px; content: ''; margin-bottom: 3px; text-align: right; position: absolute; right: 27px; top: 19px; }
   .jsnav-header .jsnav-header-wrapper .jsnav-menu li:hover > ul { opacity: 1; visibility: visible; }
