--- a/scss/jsnav.scss
+++ b/scss/jsnav.scss
@@ -1,4 +1,5 @@
 // Settings
+$position               : sticky;
 $max-width              : 1200px;
 $height                 : 90px;
 $background-color       : white;
@@ -10,6 +11,8 @@ $text-transform         : capitalize;
 
 .jsnav-header {
     background-color: $background-color;
+    top: 0;
+    position: $position;
     .jsnav-header-wrapper {
         position: relative;
         font-size: $font-size;
